[package]
name = "bitnet"
version = "0.2.0"
authors = ["Shashwat Verma <me@shashwatverma.dev>"]
repository = "https://github.com/Imyr/BITNet/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
html-escape = "0.2.13"
tokio = { version = "1", features = ["macros"] }
clap = { version = "4.1.4", features = ["derive"] }
openssl = { version = "0.10.45", features = ["vendored"] }
git2 = {version = "0.13.22", features = ["vendored-libgit2"]}
