[package]
name = "bitnet"
version = "0.2.0"
authors = ["Shashwat Verma <me@shashwatverma.dev>"]
repository = "https://github.com/Imyr/BITNet/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking"] }
html-escape = "0.2.13"
clap = { version = "4.5.19", features = ["derive"] }
openssl = { version = "0.10.66", features = ["vendored"] }
git2 = {version = "0.19.0", features = ["vendored-libgit2"]}
